--- a/package.json
+++ b/package.json
@@ -3,17 +3,18 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^12.2.2",
-    "@angular/common": "^12.2.2",
-    "@angular/compiler": "^12.2.2",
-    "@angular/core": "^12.2.2",
-    "@angular/forms": "^12.2.2",
-    "@angular/platform-browser": "^12.2.2",
-    "@angular/platform-browser-dynamic": "^12.2.2",
-    "@angular/router": "^12.2.2",
-    "rxjs": "^7.3.0",
-    "tslib": "^2.3.1",
-    "zone.js": "^0.11.4"
+    "@angular/animations": "12.2.2",
+    "@angular/common": "12.2.2",
+    "@angular/compiler": "12.2.2",
+    "@angular/core": "12.2.2",
+    "@angular/forms": "12.2.2",
+    "@angular/platform-browser": "12.2.2",
+    "@angular/platform-browser-dynamic": "12.2.2",
+    "@angular/router": "12.2.2",
+    "rxjs": "7.3.0",
+    "src": "^1.1.2",
+    "tslib": "2.3.1",
+    "zone.js": "0.11.4"
   },
   "scripts": {
     "ng": "ng",
